// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baseFunctionality ad-hoc events error handling handle acquireDistributedLock fails 1`] = `
[
  [
    "Processing event queue failed with unexpected error.",
    [Error: lock require failed],
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
    },
  ],
]
`;

exports[`baseFunctionality ad-hoc events error handling handle checkEventAndGeneratePayload fails 1`] = `
[
  [
    "Caught error during event processing - setting queue entry to error. Please catch your promises/exceptions",
    [Error: syntax error],
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
      "queueEntriesIds": [
        "dbaa22d5-41db-4ff3-bdd8-e0bb19b217cf",
      ],
    },
  ],
]
`;

exports[`baseFunctionality ad-hoc events error handling handle clusterQueueEntries fails 1`] = `
[
  [
    "Error during clustering of events - setting all queue entries to error.",
    [Error: syntax error],
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
    },
  ],
]
`;

exports[`baseFunctionality ad-hoc events error handling handle getQueueEntriesAndSetToInProgress fails 1`] = `
[
  [
    "Processing event queue failed with unexpected error.",
    [Error: db error],
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
    },
  ],
]
`;

exports[`baseFunctionality ad-hoc events error handling handle modifyQueueEntry fails 1`] = `
[
  [
    "Caught error during event processing - setting queue entry to error. Please catch your promises/exceptions",
    [Error: syntax error],
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
      "queueEntriesIds": [
        "dbaa22d5-41db-4ff3-bdd8-e0bb19b217cf",
      ],
    },
  ],
]
`;

exports[`baseFunctionality ad-hoc events error handling handle undefined return for processEvent 1`] = `
[
  [
    "The supplied status tuple doesn't have the required structure. Setting all entries to error.",
    {
      "eventSubType": "Task",
      "eventType": "Notifications",
    },
  ],
]
`;

exports[`baseFunctionality ad-hoc events error handling missing event implementation 1`] = `
[
  [
    "No Implementation found in the provided configuration file.",
    {
      "eventSubType": "NOT FOUND",
      "eventType": "404",
    },
  ],
]
`;

exports[`baseFunctionality getOpenQueueEntries event types in error should be considered 2`] = `
[
  {
    "subType": "DELETE_EVENTS",
    "type": "EVENT_QUEUE_BASE_PERIODIC",
  },
  {
    "subType": "DB",
    "type": "HealthCheck_PERIODIC",
  },
  {
    "subType": "Task",
    "type": "Notifications",
  },
  {
    "subType": "everyFiveMin",
    "type": "TimeSpecificEveryFiveMin_PERIODIC",
  },
  {
    "subType": "cron",
    "type": "TimeSpecificEveryMin_PERIODIC",
  },
]
`;

exports[`baseFunctionality getOpenQueueEntries event types in progress should be ignored 2`] = `
[
  {
    "subType": "DELETE_EVENTS",
    "type": "EVENT_QUEUE_BASE_PERIODIC",
  },
  {
    "subType": "DB",
    "type": "HealthCheck_PERIODIC",
  },
  {
    "subType": "everyFiveMin",
    "type": "TimeSpecificEveryFiveMin_PERIODIC",
  },
  {
    "subType": "cron",
    "type": "TimeSpecificEveryMin_PERIODIC",
  },
]
`;

exports[`baseFunctionality getOpenQueueEntries return open event types 2`] = `
[
  {
    "subType": "DELETE_EVENTS",
    "type": "EVENT_QUEUE_BASE_PERIODIC",
  },
  {
    "subType": "DB",
    "type": "HealthCheck_PERIODIC",
  },
  {
    "subType": "Task",
    "type": "Notifications",
  },
  {
    "subType": "everyFiveMin",
    "type": "TimeSpecificEveryFiveMin_PERIODIC",
  },
  {
    "subType": "cron",
    "type": "TimeSpecificEveryMin_PERIODIC",
  },
]
`;

exports[`baseFunctionality getOpenQueueEntries should respect app instance configuration both open event relevant for app 2`] = `
[
  {
    "subType": "AppInstance",
    "type": "AppSpecific",
  },
  {
    "subType": "Task",
    "type": "Notifications",
  },
]
`;

exports[`baseFunctionality getOpenQueueEntries should respect app instance configuration one open event for app and one not for this app 2`] = `
[
  {
    "subType": "Task",
    "type": "Notifications",
  },
]
`;

exports[`baseFunctionality getOpenQueueEntries should respect app instance configuration one open event for app and one not for this app but redis should ignore filter 2`] = `
[
  {
    "subType": "AppInstance",
    "type": "AppSpecific",
  },
  {
    "subType": "Task",
    "type": "Notifications",
  },
]
`;

exports[`baseFunctionality getOpenQueueEntries should respect app name configuration both open event relevant for app 2`] = `
[
  {
    "subType": "AppName",
    "type": "AppSpecific",
  },
  {
    "subType": "Task",
    "type": "Notifications",
  },
]
`;

exports[`baseFunctionality getOpenQueueEntries should respect app name configuration one open event for app and one not for this app 2`] = `
[
  {
    "subType": "Task",
    "type": "Notifications",
  },
]
`;

exports[`baseFunctionality getOpenQueueEntries should respect app name configuration one open event for app and one not for this app but redis should ignore filter 2`] = `
[
  {
    "subType": "AppName",
    "type": "AppSpecific",
  },
  {
    "subType": "Task",
    "type": "Notifications",
  },
]
`;

exports[`baseFunctionality periodic events two open events - not allowed 1`] = `
[
  "More than one open events for the same configuration which is not allowed!",
  {
    "eventSubType": "DB",
    "eventType": "HealthCheck_PERIODIC",
  },
]
`;
